--- a/index.html
+++ b/index.html
@@ -1,14 +1,48 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web Lab # 1</title>
+    <title>Головна - Комп'ютерні аксесуари</title>
 </head>
-<script src="js/myscript.js"></script>
+<style>
+    body{
+        font-size: 22px;
+    }
+</style>
 <body>
-    <h1 class="main"> Next </h1>
-    <p>  <b>  text </b></p>
+
+    <h2 lang="uk" id="main-page" class="section-title">Вітаємо на сайті "Комп'ютерні аксесуари"</h2>
+
+    <p align="justify">
+        Наш магазин пропонує широкий вибір комп'ютерних аксесуарів, таких як процесори, монітори, вінчестери та багато іншого.
+        Завітайте до нашого <a href="catalog.html" style="text-decoration: underline;">каталогу</a> або дізнайтесь більше <a href="about.html" style="text-decoration: underline;">про нас</a>.
+    </p>
+
+    <hr size="2" align="center" color="blue">
+
+    <h3 align="center" style="color: green;" title="Популярні аксесуари">Популярні товари</h3>
+
+    <ul>
+        <li>
+            Процесор Intel Core i7
+            <br>
+            <img src="https://upload.wikimedia.org/wikipedia/commons/d/d2/Intel_Core_i7_2020_logo.svg" alt="Intel Core i7" width="200" height="200">
+        </li>
+        <li>
+            Монітор Samsung 144 Гц
+            <br>
+            <img src="https://content1.rozetka.com.ua/goods/images/big/54632094.jpg" alt="Монітор Samsung" width="200" height="200">
+        </li>
+        <li>
+            Kingston SSD 1 ТБ
+            <br>
+            <!-- Зображення під назвою SSD -->
+            <img src="https://img.telemart.ua/435464-579668-category_page/kingston-nv2-3d-nand-1tb-m2-2280-pci-e-nvme-x4-snv2s1000g.jpg" alt="Kingston SSD" width="200" height="200">
+        </li>
+    </ul>
+
+    <br clear="both" style="margin-top: 20px;" title="Кінець сторінки">
+    
 </body>
 </html>
